# srt-bond-relay

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  Dockerfile.srt-test-live  LAN_TESTING_COOKBOOK.md  LOCAL_BOND_COOKBOOK.md  MULTI_NIC_ROUTING_GUIDE.md  OPERATIONS_GUIDE.md  README.md  main.cpp
dashboards/: srt-relay-bonded-input-single-output.json  srt-relay-switched-input-single-output.json
include/srtrelay/: causality.hpp  config.hpp  linkage.hpp  logger.hpp  metrics.hpp  relay.hpp  relay_io.hpp  srt_utils.hpp
scripts/: local-bond-lab.sh  local-switched-lab.sh
src/: causality.cpp  config.cpp  link_slot_tracker.cpp  linkage.cpp  logger.cpp  metrics.cpp  metrics_link_slots.cpp  metrics_link_slots.hpp  relay_endpoint_specs.cpp  relay_input_sources.cpp  relay_io_internal.hpp  relay_output_sinks.cpp  relay_runtime.cpp  relay_srt_endpoints.cpp  srt_utils.cpp
tests/: metrics_compat_test.cpp  relay_behavior_test.cpp  test_expect.hpp
